--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,17 +22,17 @@
   
   body {
     font-family: 'Ubuntu', sans-serif;
-    background-color: var(--white);
+    background-color: var(--blue);
     color: #000;
   }
   
+  
   .header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--white);
-    padding: 1rem 2rem;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    background: transparent;
+    justify-content: center;    
+    align-items: center;    
+    padding: 1rem 2rem;    
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -41,18 +41,31 @@
   .logo img {
     height: 50px;
   }
-  
-  .navbar {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.2rem;
-  }
-  
-  .navbar a {
-    text-decoration: none;
-    color: #000;
-    font-weight: 500;
-  }
+ 
+ 
+.navbar {
+  display: flex;  
+  background-color: var(--white);
+  gap: 1.5rem;
+  padding: 1rem 2rem; 
+  border-radius: 2rem; /* round the edges */
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  max-width: 90%;
+  align-items: center;
+}
+
+/* Navbar links */
+.navbar a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 500;
+  font-family: 'Ubuntu', sans-serif;
+  transition: color 0.3s;
+}
+
+.navbar a:hover {
+  color: var(--red); /* Optional hover effect */
+}
   
   .hero {
     background-color: var(--blue);
@@ -84,7 +97,7 @@
   
   .noticias {
     padding: 2rem;
-    background-color: #f7f7f7;
+    background-color: var(--white);
   }
   
   .noticias h2 {
@@ -125,7 +138,7 @@
   }
   
   .about h2 {
-    font-family: 'Kachusha', sans-serif;
+    font-family: 'Kachusha', sans-serif;    
     font-size: 2rem;
     margin-bottom: 1rem;
   }
@@ -134,6 +147,56 @@
     font-size: 1.1rem;
     line-height: 1.6;
   }
+
+  .doing {
+    padding: 2rem;
+    background-color: var(--white);
+  }
+  
+  .doing h2 {
+    display: flex;
+    justify-content: center;
+    color: var(--blue);
+    font-family: 'Kachusha', sans-serif;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .contacto {
+    background-color: var(--blue);
+    color: var(--white);
+    padding: 3rem 2rem;
+  }
+
+  .contacto h2{
+    display: flex;
+    justify-content: center;
+    font-family: 'Kachusha', sans-serif;
+    font-size: 2rem;
+    margin-bottom: 1rem;  
+  }
+
+  .contact-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .contact-icons a img {
+    width: 40px;
+    height: 40px;
+    background-color: var(--red); /* CICRAL red */
+    padding: 10px;
+    border-radius: 50%; /* circle shape */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+  }
+  
+  .contact-icons a:hover img {
+    transform: scale(1.1);
+  }
+
   
   @media (max-width: 768px) {
     .hero-title {
@@ -148,6 +211,7 @@
     .cards {
       flex-direction: column;
       align-items: center;
-    }
+    }    
+    
   }
   
